2-k3s/14.searxng/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: searxng
  labels:
    app: searxng
