2-k3s/14.searxng/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: searxng
  namespace: searxng
  labels:
    app: searxng
spec:
  type: ClusterIP
  selector:
    app: searxng
  ports:
    - name: http
      port: 8080
      targetPort: http
