2-k3s/14.searxng/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: searxng-https
  namespace: searxng
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`searxng.epaflix.com`)
      kind: Rule
      middlewares:
        - name: security-headers
          namespace: traefik-system
        - name: authentik-forwardauth
          namespace: traefik-system
      services:
        - name: searxng
          port: 8080
  tls:
    certResolver: cloudflare
    domains:
      - main: epaflix.com
        sans:
          - "*.epaflix.com"
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: searxng-http
  namespace: searxng
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`searxng.epaflix.com`)
      kind: Rule
      middlewares:
        - name: redirect-https
          namespace: traefik-system
      services:
        - name: searxng
          port: 8080
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: searxng-internal
  namespace: searxng
spec:
  entryPoints:
    - internal
  routes:
    - match: Host(`searxng.epaflix.com`)
      kind: Rule
      services:
        - name: searxng
          port: 8080
  tls:
    certResolver: cloudflare
    domains:
      - main: epaflix.com
        sans:
          - "*.epaflix.com"
